--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react-dom": "^19.2.3"
   },
   "devDependencies": {
+    "@types/node": "^20.11.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
